# decision-mcp-server

./: .linkspector.yml  .secrets.baseline  DEVELOPMENT.md  README.md  decision_tools_README.md  docker-compose.yaml  example_decision_explanation.py  fetch_decision_rules.py  pyproject.toml  test_tools_generation.py
.github/workflows/: ci.yml
docs/: Claude-desktop-integration-guide.md  DEVELOPMENT.md  IBM-watsonx-orchestrate-guide.md  docs:watson_orchestrate_adk.md
samples/: deploy_demo_materials.sh
src/decision_mcp_server/: Credentials.py  DecisionMCPServer.py  DecisionServerManager.py  DecisionServiceDescription.py  ExecutionToolTrace.py  __init__.py  config.py  server.py  test_tools_generation.py
src/decision_mcp_server/utils/: ssl_utils.py
tests/: test_credentials.py  test_decision_mcp_server.py  test_decision_service_description.py  test_decisionservermanager.py  test_execution_tool_trace.py
